<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.todotoday.MainActivity"
    tools:ignore="MergeRootFrame">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/background"
        android:orientation="horizontal">
        <Button
            style="@style/btn_style_def"
            android:text="@string/str_cont"
            android:layout_weight="1">
        </Button>
        <Button
            style="@style/btn_style_def"
            android:text="@string/str_kind"
            android:layout_weight="1">
        </Button>
        <Button
            style="@style/btn_style_def"
            android:text="@string/str_priority"
            android:layout_weight="1">
        </Button>
        <Button
            style="@style/btn_style_def"
            android:text="@string/str_today"
            android:layout_weight="1">
        </Button>
    </LinearLayout>
</FrameLayout>