<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.todotoday.CreateTodoActivity"
    tools:ignore="MergeRootFrame">
    <LinearLayout
        style="@style/layout_w_m_h_m"
        android:orientation="vertical">
        <LinearLayout
            style="@style/layout_w_m_h_w">
            <TextView
                style="@style/layout_w_0_h_w"
                android:layout_weight="1"
                android:text="@string/str_cont"/>
            <EditText
                style="@style/layout_w_0_h_w"
                android:layout_weight="4"
                android:id="@+id/content"
                android:hint="@string/str_cont"/>
        </LinearLayout>
        <LinearLayout
            style="@style/layout_w_m_h_w">
            <TextView
                style="@style/layout_w_0_h_w"
                android:layout_weight="1"
                android:text="@string/str_kind"/>
            <Spinner 
                android:id="@+id/kind"
                android:layout_weight="4"
                style="@style/layout_w_0_h_w"/>
        </LinearLayout>
        <LinearLayout
            style="@style/layout_w_m_h_w">
            <TextView
                style="@style/layout_w_0_h_w"
                android:layout_weight="1"
                android:text="@string/str_priority"/>
            <Spinner 
                android:id="@+id/priority"
                android:layout_weight="4"
                style="@style/layout_w_0_h_w"/>
        </LinearLayout>
        <LinearLayout
            style="@style/layout_w_m_h_w">
            <TextView
                style="@style/layout_w_0_h_w"
                android:layout_weight="1"
                android:text="@string/str_today"/>
            <Spinner 
                android:id="@+id/today"
                android:layout_weight="4"
                style="@style/layout_w_0_h_w"/>
        </LinearLayout>
        <Button 
            style="@style/layout_w_w_h_w"
            android:id="@+id/btn_create"
            android:text="@string/create_todo"/>
    </LinearLayout>
</FrameLayout>